# rust-buch

./: .gitignore  README.md  UPDATES.md
03_ownership/: Cargo.toml
03_ownership/src/: main.rs
03_ownership/tests/: 03_01_advanced_ownership.rs  03_01_lifetimes.rs  03_02_box.rs  03_02_ml_01_cells.rs  03_02_ml_02_rc.rs  03_02_ml_03_ref_cell.rs  03_02_ml_04_cell.rs  03_02_tickets.rs
04_nebenlaeufigkeit/: Cargo.toml
04_nebenlaeufigkeit/src/: main.rs
04_nebenlaeufigkeit/tests/: 03_01_sync_basics.rs  03_05_async.rs
05_testing/: Cargo.toml
05_testing/src/: hello.rs  hello_mockall.rs  kapitel_1_6_2_3_generic_traits.rs  kapitel_1_6_2_4_modules.rs  kapitel_1_6_2_5_other_modules.rs  kapitel_5_3_2_schoene_behauptungen.rs  kapitel_5_5_1_ohne_framework.rs  kapitel_5_5_2_1_traits.rs  kapitel_5_5_2_2_externe_traits.rs  kapitel_5_5_2_4_generische_methoden.rs  kapitel_5_5_2_6_module.rs  kapitel_5_5_2_7_andere_module.rs  kapitel_5_5_2_7_gemockte_module_verwenden.rs  lib.rs  main.rs  reference.rs  testing_3_1_1_k9.rs  testing_3_2_2_schoenere_behauptungen.rs  testing_3_2_benennung.rs  testing_4_1_ohne_framework.rs  testing_4_2_1_traits.rs  testing_4_2_2_structs.rs  testing_4_2_3_generische_structs_traits.rs  testing_4_2_3_generische_traits.rs  testing_4_2_4_externe_traits.rs  testing_4_2_5_spezielle_mock_syntax.rs  testing_4_2_7_gemockte_module_verwenden.rs  testing_4_2_7_module.rs  testing_4_2_x_generische_methoden.rs  testing_5_snapshots_mit_insta.rs
05_testing/src/snapshots/: rustbuch_testing__testing_5_snapshots_mit_insta__hello_world.snap
05_testing/tests/: integration.rs
06_webprogrammierung/kontaktformular/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  Rust-Buch.postman_collection.json  TODO.txt  setup_db_sqlite.sh
06_webprogrammierung/kontaktformular/migrations/2020-08-28-141929_create_requests/: down.sql  up.sql
06_webprogrammierung/kontaktformular/src/: auth.rs  catchers.rs  main.rs  model.rs  schema.rs
06_webprogrammierung/kontaktformular/src/persistence/: mod.rs  request_repo.rs
06_webprogrammierung/kontaktformular/src/routes/: admin.rs  mod.rs  public.rs
06_webprogrammierung/kontaktformular/src/snapshots/: kontaktformular__test__hello_world.snap
06_webprogrammierung/kontaktformular/templates/: index.html.hbs  index.html.tera.bla  login.html.hbs  logout.html.hbs  requests.html.hbs
06_webprogrammierung/kontaktformular/templates/error_pages/: unauthorized.html.hbs
06_webprogrammierung/rocket_basics/: Cargo.toml  Config.toml
06_webprogrammierung/rocket_basics/benches/: bench_log.rs
07_microservices/: .gitignore  Cargo.toml  Rust-Buch.postman_collection.json  Rust-Buch_Docker.postman_environment.json  docker-compose.yml  simple.rest
07_microservices/database-sink/: Cargo.toml  Dockerfile
07_microservices/database-sink/migrations/2021-06-28-195811_create_requests/: down.sql  up.sql
07_microservices/database-sink/src/: config.rs  main.rs
07_microservices/database-sink/src/persistence/: mod.rs  model.rs  schema.rs
07_microservices/infra/config/prometheus/: prometheus.yml
07_microservices/kafka-consumer/: Cargo.toml
07_microservices/kafka-consumer/src/: lib.rs  main.rs
07_microservices/mailer/: Cargo.toml  Dockerfile
07_microservices/mailer/src/: config.rs  main.rs  model.rs  smtp.rs  stub.rs
07_microservices/web/: Cargo.toml  Dockerfile  Rocket.toml
07_microservices/web/src/: main.rs  model.rs  monitoring.rs  routes.rs  tracing.rs
07_microservices/web/src/kafka/: fairing.rs  mod.rs
08_systemnah/: README.md  build.rs
08_systemnah/08_01_unsafe_rust/: .gitignore  Cargo.toml
08_systemnah/08_01_unsafe_rust/src/: main.rs
08_systemnah/08_01_unsafe_rust/tests/: unsafe_basics.rs
08_systemnah/08_02_syscall/: .gitignore  Cargo.toml
08_systemnah/08_02_syscall/src/: main.rs
08_systemnah/08_02_syscall/tests/: syscall.rs
08_systemnah/08_03_externe_bibliotheken/: .gitignore  Cargo.toml  README.md  build.rs
08_systemnah/08_03_externe_bibliotheken/include/: ext.c
08_systemnah/08_03_externe_bibliotheken/src/: main.rs
08_systemnah/08_04_performance/: .gitignore  Cargo.toml  README.md
08_systemnah/08_04_performance/benches/: sorting.rs
08_systemnah/08_04_performance/src/: lib.rs
08_systemnah/include/: Makefile  ext.c
08_systemnah/src/: main.rs
09_language-bindings/java/: pom.xml
09_language-bindings/java/java-j4rs/: build-and-run.sh
09_language-bindings/java/java-j4rs/java/: pom.xml
09_language-bindings/java/java-j4rs/rust/: Cargo.toml
09_language-bindings/java/java-j4rs/rust/src/: lib.rs
09_language-bindings/java/java-jna/java/: pom.xml
09_language-bindings/java/java-jni/: build.sh  run.sh
09_language-bindings/java/rust-java-j4rs/: Cargo.toml
09_language-bindings/nodejs/: build-and-run.sh
09_language-bindings/nodejs-neon/: README.md  package-lock.json  package.json
09_language-bindings/nodejs-neon/lib/: index.cjs  index.js  index.mjs
09_language-bindings/nodejs-neon/native/: Cargo.toml
09_language-bindings/nodejs-neon/native/src/: lib.rs
09_language-bindings/nodejs/rustbuch_hello/: Cargo.toml  README.md  index.cjs  index.mjs  package-lock.json  package.json
09_language-bindings/nodejs/rustbuch_hello/src/: lib.rs
09_language-bindings/nodejs/rustbuch_usage/: index.js  package-lock.json  package.json
09_language-bindings/rust/: Cargo.toml
09_language-bindings/rust/src/: lib.rs
10_webassembly/assemblyscript/: package-lock.json  package.json
10_webassembly/browser/hello-wasm-browser/: Cargo.toml  build.sh  index.html  run-webserver.sh
10_webassembly/browser/hello-wasm-pack/: Cargo.toml  LICENSE_MIT  install.sh  run-test-in-firefox.sh
10_webassembly/rust-buch_wasm-pack/: Cargo.toml
10_webassembly/rust-buch_wasm-pack/src/: lib.rs
10_webassembly/server/cargo-wasi/: Cargo.toml  run.sh
10_webassembly/server/copy-file/: Cargo.toml  build-run.sh  hello.txt  setup.sh
10_webassembly/server/embed-bin/: Cargo.toml  embed_lib.wasm
10_webassembly/server/embed-lib/: Cargo.toml  build.sh
10_webassembly/server/hello-wasi-target/: Cargo.toml  build-and-run.sh  setup.sh
(+26 files in other folders)
