[package]
name = "rust_buch_04_nebenlaeufigkeit"
version = "0.1.0"
authors = ["Marco Amann <marco@amann.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.7.1", features = ["full", "time"] }
rayon = "1.5.1"