[package]
name = "rustbuch_microservices_database-sink"
version = "0.1.0"
authors = ["Marcel Koch <kontakt@marcelkoch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rdkafka = "0.25.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.8.2"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
envy = "0.4"
futures = "0.3.0"
structopt = "0.3"
serde_json = "1.0"
hex = "*"

rustbuch_microservices_kafka-consumer = {version="*", path="../kafka-consumer"}

opentelemetry = {version = "0.15.0", features = ["serialize"] }
opentelemetry-zipkin = "0.13.0"
opentelemetry-prometheus = "0.8.0"
prometheus = "0.12.0"


[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "chrono"]

[dependencies.chrono]
version = "0.4.9"
features = ["serde"]

