[package]
name = "kafka-consumer"
version = "0.1.0"
authors = ["Marcel Koch <kontakt@marcelkoch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = "0.25.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
chrono = "0.4.19"
env_logger = "0.8.2"
clap = "2.33.3"
