[package]
name = "rustbuch_microservices_mailer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustbuch_microservices_kafka-consumer = {version="*", path="../kafka-consumer"}
#rdkafka = "0.25.0"
structopt = "0.3"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "*"
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
env_logger = "0.8.2"
openssl = { version = "=0.10.41", features = ["vendored"] }

lettre = "0.10.0-rc.3"

opentelemetry = {version = "0.15.0", features = ["serialize"] }
opentelemetry-zipkin = "0.13.0"
opentelemetry-prometheus = "0.8.0"
prometheus = "0.12.0"


[features]
default = ["stub"]
stub = []
smtp = ["lettre/smtp-transport"]
