[package]
name = "rustbuch_microservices_web"
version = "0.1.0"
authors = ["Marcel Koch <kontakt@marcelkoch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

log = "0.4.14"
env_logger = "0.8.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dotenv = "0.15.0"

hex = "0.4.2"
opentelemetry-prometheus = "0.8.0"
opentelemetry = {version = "0.15.0", features = ["serialize"] }
prometheus = "0.12.0"
lazy_static = "1.4.0"
sha2 = "0.9.5"

rdkafka = "0.25"
futures = "0.3.5"
csv = "1.1.6"
opentelemetry-zipkin = "0.13.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]
