[package]
name = "rust_buch_08_02_syscall"
version = "0.1.0"
authors = ["Marco Amann <marco@amann.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.71"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["full"] }