[package]
name = "showcase"
version = "0.1.0"
authors = ["Marco Amann <marco@pfudi.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
coarsetime = "0.1.14"



[dev-dependencies]
criterion = "0.3"



[profile.release]
debug = true

[lib]
bench = false

[[bin]]
name = "sort_iterative_runner"
bench = false

[[bin]]
name = "sort_recursive_runner"
bench = false

[[bench]]
name = "sorting"
harness = false