[package]
name = "rust-buch_language-bindings"
version = "0.1.0"
authors = ["Marcel Koch <kontakt@marcelkoch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
j4rs = "0.13.0"
j4rs_derive = "0.1.0"
