[package]
name = "nodejs-neon"
version = "0.1.0"
authors = ["Marcel Koch <kontakt@marcelkoch.net>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "nodejs_neon"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.7.1"

[dependencies]
neon = "0.7.1"
