[package]
name = "rustbuch_hello"
version = "0.1.0"
description = "Showing whats possible with neon"
authors = ["Marcel Koch <m@rcelko.ch>"]
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "channel-api"]
