[package]
name = "rustbuch_bindings_java-j4rs"
version = "0.1.0"
authors = ["Marcel Koch <m@rcelko.ch>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
j4rs = "0.13.0"
j4rs_derive = "0.1.0"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4.0"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
